--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,7 @@
 $red-color: #DE3E4C;
 $red-light-color: lighten($red-color, 15);
 $red-dark-color: darken($red-color, 15);
-$background-color: #70bff3;
+$blue-color: #d7ecf7;
+
+// $body-background: $blue-color;
+// $body-background-color: $blue-color;
