--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,5 +3,6 @@ $red-light-color: lighten($red-color, 15);
 $red-dark-color: darken($red-color, 15);
 $blue-color: #d7ecf7;
 
+$family-primary: 'Work Sans', sans-serif;
 // $body-background: $blue-color;
 // $body-background-color: $blue-color;
